crates/swc_ecma_parser/tests/test262-error-references/fail/14eaa7e71c682461.js.stderr
error: Invalid unicode code point
 --> $DIR/tests/test262-parser/fail/14eaa7e71c682461.js:1:6
  |
1 | ("\u{FFFFFFF}")
  |      ^^^^^^^

